--- a/report/_quarto.yml
+++ b/report/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 format:
   pdf:
-    pdf-engine: xelatex
+    pdf-engine: lualatex
     toc: true
     number-sections: true
     geometry:
@@ -14,12 +14,16 @@ format:
           \usepackage{polyglossia}
           \setmainlanguage{mongolian}
           \setotherlanguage{english}
-          \setmainfont{Arial}
-          \setsansfont{Arial}
-          \setmonofont{Arial}
-          \newfontfamily\cyrillicfont{Arial}
-          \newfontfamily\cyrillicfontsf{Arial}
-          \newfontfamily\cyrillicfonttt{Arial}
+          \usepackage{fontspec}
+          \setmainfont{CMU Serif}
+          \setsansfont{CMU Sans Serif}
+          \setmonofont{CMU Typewriter Text}
+          \newfontfamily\cyrillicfont{CMU Serif}
+          \newfontfamily\cyrillicfontsf{CMU Sans Serif}
+          \newfontfamily\cyrillicfonttt{CMU Typewriter Text}
+          \usepackage{ragged2e}
+          \RaggedRight
+          \setlength{\RaggedRightParindent}{\parindent}
   html:
     toc: true
     lang: mn
